# silk-data-pipeline

./: .coverage  .gitignore  Readme.md  pyproject.toml  visualize_data.py
src/: .coverage  main.py
src/clients/: crowdstrike.py  qualys.py
src/config/: settings.py
src/models/: host.py
src/services/: deduplication.py  normalization.py
tests/: test_client.py  test_deduplication.py  test_normalization.py
